--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <script src="https://use.fontawesome.com/3f1495bd79.js"></script>
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./js/scripts.js" defer></script>
@@ -23,8 +23,7 @@
                     type="radio"
                     id="travelPack"
                     name="orderItem"
-                    checked
-                  />
+                    checked/>
                   <label for="travelPack" class="fancy-label">
                     <span class="label-content-wrapper">
                       <span class="option-item-name">
